# aiken

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE  README.md  add.uplc  add_integers.uplc  bonnie.toml  fib.uplc  fib_iter.uplc  flake.nix  syntax.txt  thing.tx  thing.uplc  thing_resolved_txins.tx
crates/aiken/: Cargo.toml  README.md
crates/aiken-lang/: Cargo.toml
crates/aiken-lang/proptest-regressions/tipo/: fields.txt
crates/aiken-lang/src/: air.rs  ast.rs  builder.rs  builtins.rs  coverage.rs  expr.rs  format.rs  gen_uplc.rs  gen_uplc2.rs  levenshtein.rs  lib.rs  line_numbers.rs  parser.rs  plutus_version.rs  pretty.rs  test_framework.rs  tipo.rs  uplc.rs  version.rs
crates/aiken-lang/src/ast/: well_known.rs
crates/aiken-lang/src/error/: mod.rs
crates/aiken-lang/src/gen_uplc/: air.rs  builder.rs  decision_tree.rs  interner.rs  scope.rs  stack.rs  stick_break_set.rs  tree.rs
crates/aiken-lang/src/gen_uplc2/: air.rs  builder.rs  tree.rs
crates/aiken-lang/src/gen_uplc_old/: air.rs
crates/aiken-lang/src/parser/: annotation.rs  error.rs  extra.rs  lexer.rs  module.rs  token.rs  utils.rs
crates/aiken-lang/src/snapshots/: can_handle_comments_at_end_of_file.snap  function_ambiguous_sequence.snap  merge_imports.snap  parse_unicode_offset_1.snap  parse_unicode_offset_2.snap  windows_newline.snap
crates/aiken-lang/src/tests/: check.rs  format.rs  gen_uplc.rs  lexer.rs  mod.rs  parser.rs
crates/aiken-lang/src/tipo/: environment.rs  error.rs  exhaustive.rs  expr.rs  fields.rs  hydrator.rs  infer.rs  pattern.rs  pipe.rs  pretty.rs
crates/aiken-lang/src/utils/: mod.rs
crates/aiken-lsp/: Cargo.toml  README.md
crates/aiken-lsp/src/: cast.rs  edits.rs  error.rs  lib.rs  line_numbers.rs  quickfix.rs  server.rs  utils.rs
crates/aiken-lsp/src/server/: lsp_project.rs  telemetry.rs
crates/aiken-project/: Cargo.toml
crates/aiken-project/src/: blueprint.rs  config.rs  deps.rs  docs.rs  error.rs  export.rs  format.rs  lib.rs  module.rs  options.rs  package_name.rs  paths.rs  pretty.rs  script.rs  telemetry.rs  test_framework.rs  verify.rs  watch.rs
crates/aiken-project/src/blueprint/: definitions.rs  error.rs  memo_program.rs  mod.rs  parameter.rs  schema.rs  schema_from_type.rs  source_map.rs  validator.rs
crates/aiken-project/src/coverage/: lcov.rs  mod.rs  tracking.rs
crates/aiken-project/src/docs/: link_tree.rs  source_links.rs
crates/aiken-project/src/github/: mod.rs  repo.rs
crates/aiken-project/src/snapshots/: aiken_project__export__tests__basic_export.snap  aiken_project__export__tests__cannot_export_generics.snap  aiken_project__export__tests__illegal_opaque_type.snap  aiken_project__export__tests__recursive_types.snap  aiken_project__export__tests__recursive_types.snap.new
crates/aiken-project/src/telemetry/: json.rs  terminal.rs
crates/aiken-project/src/tests/: gen_uplc.rs  mod.rs
crates/aiken-project/src/utils/: indexmap.rs
crates/aiken-project/src/verify/: error_catalogue.rs  result_parser.rs  tests.rs
crates/aiken-project/templates/: _layout.html  module.html  page.html
crates/aiken-project/templates/css/: atom-one-dark.min.css  atom-one-light.min.css  index.css
crates/aiken-project/templates/js/: highlightjs-aiken.js
crates/aiken-wasm/: .gitignore  Cargo.toml  Makefile  README.md  package.json  tsconfig.typedoc.json  typedoc.json
crates/aiken-wasm/src/: compile_error.rs  lib.rs  parser.rs  project.rs  tracing.rs
crates/aiken/src/: lib.rs  main.rs
crates/aiken/src/cmd/: address.rs  benchmark.rs  build.rs  check.rs  completion.rs  coverage.rs  docs.rs  error.rs  export.rs  export_tests.rs  fmt.rs  lsp.rs  mod.rs  new.rs  verify.rs  watch.rs
crates/aiken/wix/: main.wxs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  error.rs  lib.rs  main.rs  module.rs  project.rs  utils.rs
crates/cli/src/cmd/: build.rs  check.rs  error.rs  eval.rs  fmt.rs  lsp.rs  mod.rs  new.rs
crates/flat/: Cargo.toml  README.md
crates/flat-rs/: Cargo.toml
crates/flat-rs/src/: lib.rs
crates/flat-rs/src/decode/: decoder.rs  error.rs
crates/flat-rs/src/encode/: encoder.rs
crates/flat-rs/tests/: flat_test.rs  zigzag_test.rs
crates/flat/src/: decode.rs  decoder.rs  encode.rs  encoder.rs  filler.rs  lib.rs  zigzag.rs
crates/flat/src/decode/: decoder.rs  error.rs
crates/flat/src/encode/: encoder.rs  error.rs
crates/flat/tests/: flat_test.rs  zigzag_test.rs
crates/lang/: Cargo.toml
crates/lang/src/: air.rs  ast.rs  build.rs  builder.rs  builtins.rs  error.rs  expr.rs  format.rs  ir.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  tipo.rs  token.rs  uplc.rs  uplc_two.rs
crates/lang/src/parser/: error.rs  extra.rs  lexer.rs  token.rs
crates/lang/src/tests/: lexer.rs  parser.rs
crates/lang/src/tipo/: environment.rs  error.rs  expr.rs  fields.rs  hydrator.rs  infer.rs  pattern.rs  pipe.rs  pretty.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: error.rs  lib.rs  line_numbers.rs  server.rs
crates/project/: Cargo.toml  README.md
crates/project/src/: config.rs  deps.rs  docs.rs  error.rs  format.rs  lib.rs  module.rs  options.rs  paths.rs  pretty.rs  script.rs  telemetry.rs
crates/project/templates/: _layout.html  module.html
crates/project/templates/css/: atom-one-light.min.css  index.css
crates/project/templates/js/: highlightjs-aiken.js  index.js
crates/uplc/: Cargo.toml  README.md
crates/uplc/example/: integer.uplc
crates/uplc/examples/: identity_builder_ext.rs
crates/uplc/proptest-regressions/program_builder/: constant.txt  tests.txt
crates/uplc/src/: ast.rs  builder.rs  builtins.rs  debruijn.rs  flat.rs  interpreter.rs  lib.rs  machine.rs  optimize.rs  parser.rs  pretty.rs  program_builder.rs  shrinker.rs  test.rs  transaction_eval.rs  tx.rs
crates/uplc/src/ast/: builder.rs
crates/uplc/src/debruijn/: bimap.rs
crates/uplc/src/tx/: error.rs  (+5 more)
crates/uplc/tests/: conformance.rs  integ_tests.rs  pretty_tests.rs
plugin/: .gitignore  Cargo.toml
plugin/src/: lib.rs
plugin/src/blueprint/: definitions.rs  mod.rs  parameter.rs  schema.rs  validator.rs
(+1140 files in other folders)
