[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate_type = ["cdylib"]

[dependencies]
uplc = "1.0.17-alpha"
extism-pdk = "0.3.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
