[package]
name = "aiken-lang"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

build = "build.rs"

[dependencies]
blst = "0.3.11"
cryptoxide = "0.4.4"
hex = "0.4.3"
indexmap = "1.9.2"
indoc = "2.0.1"
itertools = "0.10.5"
miette.workspace = true
num-bigint = "0.4.3"
ordinal = "0.3.2"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
pallas-primitives.workspace = true
patricia_tree = "0.8.0"
petgraph = "0.6.3"
pretty = "0.12.3"
serde = { version = "1.0.197", features = ["derive", "rc"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.39"
uplc = { path = '../uplc', version = "1.1.15" }
vec1 = "1.10.1"

[target.'cfg(not(target_family="wasm"))'.dependencies]
chumsky = "0.9.2"
[target.'cfg(target_family="wasm")'.dependencies]
chumsky = { version = "0.9.2", features = [
    "ahash",
    "std",
], default-features = false }

[dev-dependencies]
indoc = "2.0.1"
insta.workspace = true
pretty_assertions = "1.3.0"

[build-dependencies]
built = { version = "0.7.1", features = ["git2"] }
