[package]
name = "aiken-lsp"
version = "0.0.28"
edition = "2021"
description = "Cardano smart contract language and toolchain"
repository = "https://github.com/aiken-lang/aiken"
homepage = "https://github.com/aiken-lang/aiken"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>"]


[dependencies]
aiken-lang = { path = '../aiken-lang', version = "0.0.28" }
aiken-project = { path = '../aiken-project', version = "0.0.28" }
crossbeam-channel = "0.5.6"
indoc = "2.0.0"
itertools = "0.10.5"
lsp-server = "0.6.0"
lsp-types = "0.93.2"
miette = "5.4.1"
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tracing = "0.1.37"
url = "2.3.1"
urlencoding = "2.1.2"
