[package]
name = "aiken-lsp"
version = "1.1.9"
edition = "2021"
description = "Cardano smart contract language and toolchain"
repository = "https://github.com/aiken-lang/aiken"
homepage = "https://github.com/aiken-lang/aiken"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>"]
rust-version = "1.70.0"

[dependencies]
crossbeam-channel = "0.5.7"
indoc = "2.0.1"
itertools = "0.10.5"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
miette.workspace = true
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
serde = "1.0.152"
serde_json = "1.0.94"
thiserror = "1.0.39"
tracing = "0.1.37"
url = "2.3.1"
urlencoding = "2.1.2"

aiken-lang = { path = '../aiken-lang', version = "1.1.9" }
aiken-project = { path = '../aiken-project', version = "1.1.9" }
