[package]
name = "aiken-project"
description = "Aiken project utilities"
version = "1.1.9"
edition = "2021"
repository = "https://github.com/aiken-lang/aiken"
homepage = "https://github.com/aiken-lang/aiken"
license = "Apache-2.0"
authors = [
    "Lucas Rosa <x@rvcas.dev>",
    "Kasey White <kwhitemsg@gmail.com>",
    "KtorZ <matthias.benkort@gmail.com>",
]
rust-version = "1.70.0"
build = "build.rs"

[dependencies]
aiken-lang = { path = "../aiken-lang", version = "1.1.9" }
askama = { version = "0.12.0", features = ["urlencode"] }
camino = "1.1.9"
ciborium = "0.2.2"
dirs = "4.0.0"
fslock = "0.2.1"
futures = "0.3.26"
hex = "0.4.3"
ignore = "0.4.20"
indexmap = "1.9.2"
itertools = "0.10.5"
miette = { version = "7.2.0", features = ["fancy"] }
notify = "6.1.1"
num-bigint = "0.4.4"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
pallas-addresses.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-primitives.workspace = true
pallas-traverse.workspace = true
petgraph = "0.6.3"
pulldown-cmark = { version = "0.12.0", default-features = false, features = [
    "html",
] }
rayon = "1.7.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
strip-ansi-escapes = "0.1.1"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.2"
uplc = { path = '../uplc', version = "1.1.9" }
vec1 = "1.10.1"
walkdir.workspace = true
zip = "0.6.4"

[target.'cfg(not(windows))'.dependencies]
katex = "0.4"

[dev-dependencies]
blst = "0.3.11"
indoc = "2.0.1"
insta.workspace = true
proptest = "1.2.0"
pretty_assertions = "1.3.0"

[build-dependencies]
built = { version = "0.7.1", features = ["git2"] }
