[package]
name = "aiken-wasm"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aiken-lang = { path = "../aiken-lang", version = "1.1.21", features = [ "wasm" ] }
console_error_panic_hook = "0.1.7"
miette.workspace = true
wasm-bindgen = "0.2"
getrandom = { version = "0.2.16", features = ["js"] }

[build-dependencies]
built = { version = "0.7.1", features = ["git2"] }
