[package]
name = "aiken"
description = "Cardano smart contract language and toolchain"
version = "1.0.24-alpha"
edition = "2021"
repository = "https://github.com/aiken-lang/aiken"
homepage = "https://github.com/aiken-lang/aiken"
license = "Apache-2.0"
authors = [
  "Lucas Rosa <x@rvcas.dev>",
  "Kasey White <kwhitemsg@gmail.com>",
  "KtorZ <matthias.benkort@gmail.com>",
]
rust-version = "1.66.1"

[dependencies]
clap = { version = "4.1.8", features = [
  "derive",
  "wrap_help",
  "unicode",
  "string",
] }
hex = "0.4.3"
ignore = "0.4.20"
indoc = "2.0"
miette = { version = "5.5.0", features = ["fancy"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
pallas.workspace = true
regex = "1.7.1"
serde_json = "1.0.94"
thiserror = "1.0.39"

termion = "3.0.0"

aiken-lang = { path = "../aiken-lang", version = "1.0.24-alpha" }
aiken-lsp = { path = "../aiken-lsp", version = "1.0.24-alpha" }
aiken-project = { path = '../aiken-project', version = "1.0.24-alpha" }
uplc = { path = '../uplc', version = "1.0.24-alpha" }
clap_complete = "4.3.2"
inquire = "0.6.2"
num-bigint = "0.4.3"
ordinal = "0.3.2"
rand = "0.8.5"
