[package]
name = "aiken"
description = "Cardano smart contract language and toolchain"
version = "1.1.10"
edition = "2021"
repository = "https://github.com/aiken-lang/aiken"
homepage = "https://github.com/aiken-lang/aiken"
license = "Apache-2.0"
authors = [
    "Lucas Rosa <x@rvcas.dev>",
    "Kasey White <kwhitemsg@gmail.com>",
    "KtorZ <matthias.benkort@gmail.com>",
]
rust-version = "1.70.0"

[package.metadata.wix]
upgrade-guid = "288B160D-418A-4558-91B9-7C38CFD789C7"
path-guid = "4EB8FCD6-261B-4F6C-B7DB-CFA67B4E6960"
license = false
eula = false

[dependencies]
aiken-lang = { path = "../aiken-lang", version = "1.1.10" }
aiken-lsp = { path = "../aiken-lsp", version = "1.1.10" }
aiken-project = { path = '../aiken-project', version = "1.1.10" }
clap = { version = "4.1.8", features = [
    "derive",
    "wrap_help",
    "unicode",
    "string",
] }
clap_complete = "4.3.2"
color-print = "0.3.7"
hex = "0.4.3"
ignore = "0.4.20"
indoc = "2.0"
inquire = "0.6.2"
miette.workspace = true
num-bigint = "0.4.3"
ordinal = "0.3.2"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
pallas-codec.workspace = true
pallas-primitives.workspace = true
pallas-traverse.workspace = true
rand = "0.8.5"
regex = "1.7.1"
serde_json = "1.0.94"
thiserror = "1.0.39"
uplc = { path = '../uplc', version = "1.1.10" }

[target.'cfg(not(windows))'.dependencies]
xdg = "2.5.2"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
openssl-probe = "0.1.5"
