[package]
name = "aiken"
description = "Cardano smart contract language and toolchain"
version = "0.0.24"
edition = "2021"
repository = "https://github.com/txpipe/aiken"
homepage = "https://github.com/txpipe/aiken"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>", "Kasey White <kwhitemsg@gmail.com>"]

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.14", features = ["derive"] }
hex = "0.4.3"
ignore = "0.4.18"
miette = { version = "5.3.0", features = ["fancy"] }
pallas-addresses = "0.14.0-alpha.3"
pallas-codec = "0.14.0-alpha.3"
pallas-crypto = "0.14.0-alpha.3"
pallas-primitives = "0.14.0-alpha.3"
pallas-traverse = "0.14.0-alpha.3"

aiken-lang = { path = "../lang", version = "0.0.24" }
aiken-project = { path = '../project', version = "0.0.24" }
uplc = { path = '../uplc', version = "0.0.24" }
