[package]
name = "aiken"
description = "Cardano smart contract language and toolchain"
version = "0.0.26"
edition = "2021"
repository = "https://github.com/txpipe/aiken"
homepage = "https://github.com/txpipe/aiken"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>", "Kasey White <kwhitemsg@gmail.com>"]

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.14", features = ["derive"] }
hex = "0.4.3"
ignore = "0.4.18"
indoc = "1.0"
miette = { version = "5.3.0", features = ["fancy"] }
owo-colors = "3.5.0"
pallas-addresses = "0.14.0"
pallas-codec = "0.14.0"
pallas-crypto = "0.14.0"
pallas-primitives = "0.14.0"
pallas-traverse = "0.14.0"
regex = "1.5.4"
thiserror = "1.0.31"

aiken-lang = { path = "../lang", version = "0.0.26" }
aiken-lsp = { path = "../lsp", version = "0.0.26" }
aiken-project = { path = '../project', version = "0.0.26" }
uplc = { path = '../uplc', version = "0.0.25" }
