[package]
name = "flat-rs"
description = "Flat codec"
version = "0.0.27"
edition = "2021"
repository = "https://github.com/aiken-lang/aiken/crates/flat"
homepage = "https://github.com/aiken-lang/aiken"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>", "Kasey White <kwhitemsg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.39"

[dev-dependencies]
proptest = "1.1.0"
