[package]
name = "aiken-lang"
description = "The aiken compiler"
version = "0.0.20"
edition = "2021"
repository = "https://github.com/txpipe/aiken"
homepage = "https://github.com/txpipe/aiken"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>", "Kasey White <kwhitemsg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
internment = "0.7.0"
itertools = "0.10.5"
miette = "5.2.0"
thiserror = "1.0.37"
vec1 = "1.8.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
