[package]
name = "uplc"
description = "Utilities for working with Untyped Plutus Core"
version = "1.0.3-alpha"
edition = "2021"
repository = "https://github.com/aiken-lang/aiken/crates/uplc"
homepage = "https://github.com/aiken-lang/aiken"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>", "Kasey White <kwhitemsg@gmail.com>"]
rust-version = "1.66.1"
exclude = ["test_data/*"]

[dependencies]
anyhow = "1.0.69"
cryptoxide = "0.4.4"
hex = "0.4.3"
indexmap = "1.9.2"
itertools = "0.10.5"
k256 = { version = "0.13.0", optional = true }
miette = "5.5.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
pallas-addresses = "0.18.0"
pallas-codec = "0.18.0"
pallas-crypto = "0.18.0"
pallas-primitives = "0.18.0"
pallas-traverse = "0.18.0"
peg = "0.8.1"
pretty = "0.11.3"
pretty_assertions = "1.3.0"
secp256k1 = { version = "0.26.0", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.39"

flat-rs = { path = "../flat-rs", version = "1.0.3-alpha" }

[dev-dependencies]
hex = "0.4.3"
indoc = "2.0.1"

[features]
default = ["dep:secp256k1"]
native-secp256k1 = ["dep:k256"]
unstable = []
