[package]
name = "uplc"
description = "Utilities for working with Untyped Plutus Core"
version = "1.0.29-alpha"
edition = "2021"
repository = "https://github.com/aiken-lang/aiken"
homepage = "https://github.com/aiken-lang/aiken"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>", "Kasey White <kwhitemsg@gmail.com>"]
rust-version = "1.66.1"
exclude = ["test_data/*"]

[dependencies]
cryptoxide = "0.4.4"
hex = "0.4.3"
indexmap = "1.9.2"
itertools = "0.10.5"
miette = "5.5.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
pallas-crypto = "0.22.0"
pallas-primitives = "0.22.0"
pallas-addresses = "0.22.0"
pallas-codec = { version = "0.22.0", features = ["num-bigint"] }
pallas-traverse = "0.22.0"
peg = "0.8.1"
pretty = "0.11.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.39"
blst = "0.3.11"
once_cell = "1.18.0"

[target.'cfg(not(target_family="wasm"))'.dependencies]
secp256k1 = { version = "0.26.0" }
[target.'cfg(target_family="wasm")'.dependencies]
k256 = { version = "0.13.0" }

[dev-dependencies]
hex = "0.4.3"
indoc = "2.0.1"
pretty_assertions = "1.3.0"
walkdir.workspace = true
