[package]
name = "uplc"
version.workspace = true
edition.workspace = true
description = "Utilities for working with Untyped Plutus Core"
license.workspace = true
authors = ["Lucas Rosa <x@rvcas.dev>", "Kasey White <kwhitemsg@gmail.com>"]
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

exclude = ["test_data/*"]

[dependencies]
cryptoxide = "0.4.4"
hex = "0.4.3"
indexmap = "1.9.2"
itertools = "0.10.5"
miette = "5.5.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
pallas-addresses.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-primitives.workspace = true
pallas-traverse.workspace = true
peg = "0.8.1"
pretty = "0.11.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.39"
blst = "0.3.11"
once_cell = "1.18.0"
hamming = "0.1.3"
bitvec = "1.0.1"

[target.'cfg(not(target_family="wasm"))'.dependencies]
secp256k1 = { version = "0.26.0" }
[target.'cfg(target_family="wasm")'.dependencies]
k256 = { version = "0.13.0" }

[dev-dependencies]
hex = "0.4.3"
indoc = "2.0.1"
insta.workspace = true
pretty_assertions = "1.3.0"
walkdir.workspace = true
